fix: reduce gap between team member card

--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -671,6 +671,9 @@
     }
   }
 
+  .card-col{
+    padding-inline: 4px;
+  }
   .team-card {
     width: 100%;
     max-width: 400px;
